# compsy-pro

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PROJECT_RESEARCH_PLAN.md  README.md  SYSTEM_SPECS.md  justfile  pyproject.toml
configs/data/: attachment.yaml  external_import.yaml  negation.yaml  role.yaml
configs/experiments/: annotation_full.yaml  full.yaml  full_gpt2.yaml  full_probes.yaml  pilot.yaml  plots_full.yaml  probes.yaml  qualitative_full.yaml  regular_consistency_summary.yaml  regular_modern_gemma3_4b.yaml  regular_modern_gemma3_4b_consistency.yaml  regular_modern_gpt2_consistency.yaml  regular_modern_llama31_8b.yaml  regular_modern_mistral_7b.yaml  regular_modern_mistral_7b_consistency.yaml  regular_modern_models.yaml  regular_modern_qualitative_gemma3_4b.yaml  regular_modern_qualitative_mistral_7b.yaml  regular_modern_qualitative_qwen3_4b.yaml  regular_modern_qualitative_qwen3_8b.yaml  regular_modern_qwen3_4b.yaml  salience_full.yaml  (+11 more)
docs/: DECISIONS.md  PHASES.md  SETUP.md  STACK_AND_TOOLING.md  WORKFLOW.md
papers/: README.md
scripts/: analyze_results_for_rq.py  checkpoint_commit.sh  log_event.py  run_counterfactual_consistency.sh  run_full_metrics.sh  run_modern_gemma3_4b.sh  run_modern_mistral_7b.sh  run_modern_qwen3_4b.sh  run_modern_qwen3_8b.sh  run_pilot.sh  run_probes.sh  run_qualitative_analysis.sh  run_salience_and_plots.sh  run_stats.sh  sync_external_dataset.sh
tests/: test_external_import.py  test_matrix_norms.py  test_probe_dataset.py  test_schema.py  test_smoke.py  test_surprisal.py  test_token_alignment.py
(+238 files in other folders)
